--- a/src/app/pages/client/components/view-personal-info/view-personal-info.component.html
+++ b/src/app/pages/client/components/view-personal-info/view-personal-info.component.html
@@ -96,7 +96,7 @@
                             <div class="row">
                                 <div class="col-12 image-container">
                                     <label class="position-relative" for="uploadImage">
-                                        <img [src]="clientDetail?.avatar ? clientDetail?.avatar : productImage" alt="profile">
+                                        <img [src]="productImage" alt="profile">
                                         <div class="for_ovelay">
                                             <img src="assets/Camera.png" alt="camera">
                                         </div>
