--- a/src/app/pages/supplier/components/add-supplier/add-supplier.component.html
+++ b/src/app/pages/supplier/components/add-supplier/add-supplier.component.html
@@ -35,31 +35,31 @@
                     </div>
                 </div>
 
-                <div class="row my-5">
-                    <div class="col-sm-12 col-md-4 col-lg-2 my-2 my-lg-0 px-0 px-lg-3">
+                <div class="row mt-50">
+                    <div class="col-sm-12 col-md-4 col-lg-3 my-2 my-lg-0 px-0 px-lg-3">
                         <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="city">المدينة</label> <br>
                         <input class="form-control" type="text" name="city" id="city" ngModel #city="ngModel" required placeholder="المدينة">
                     </div>
-                    <div class="col-sm-12 col-md-4 col-lg-2 my-2 my-lg-0 px-0 px-lg-3">
+                    <div class="col-sm-12 col-md-4 col-lg-3 my-2 my-lg-0 px-0 px-lg-3">
                         <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="neighborhood">الحي</label> <br>
                         <input class="form-control" type="text" name="neighborhood" id="neighborhood" ngModel #neighborhood="ngModel" required placeholder="الحي">
                     </div>
-                    <div class="col-sm-12 col-md-4 col-lg-2 my-2 my-lg-0 px-0 px-lg-3">
+                    <div class="col-sm-12 col-md-4 col-lg-3 my-2 my-lg-0 px-0 px-lg-3">
                         <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="street">الشارع</label> <br>
                         <input class="form-control" type="text" name="street" id="street" ngModel #street="ngModel" required placeholder="الشارع">
                     </div>
                 </div>
-                <div class="row my-5">
-                    <div class="col-sm-12 col-md-4 col-lg-3 my-2 my-lg-0 px-0 px-lg-3">
+                <div class="row mt-50">
+                    <div class="col-sm-12 col-md-4 col-lg-4 my-2 my-lg-0 px-0 px-lg-3">
                         <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="postal_code">رقم السجل التجاري</label> <br>
                         <input class="form-control" type="text" name="postal_code" id="postal_code" ngModel #postal_code="ngModel" required placeholder="رقم السجل التجاري">
                     </div>
-                    <div class="col-sm-12 col-md-4 col-lg-3 my-2 my-lg-0 px-0 px-lg-3">
+                    <div class="col-sm-12 col-md-4 col-lg-4 my-2 my-lg-0 px-0 px-lg-3">
                         <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="mailbox">رقم ضريبة القيمة المضافة</label> <br>
                         <input class="form-control" type="text" name="mailbox" id="mailbox" ngModel #mailbox="ngModel" required placeholder="رقم ضريبة القيمة المضافة">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mt-5">
                     <div class="col-12">
                         <button class="addsupplier-btn mx-auto fs-30 Tajawal-Medium" [disabled]="form.invalid">إضافة</button>
                     </div>
