--- a/src/app/pages/client/components/add-client/add-client.component.html
+++ b/src/app/pages/client/components/add-client/add-client.component.html
@@ -23,7 +23,7 @@
                     </div>
                 </div>
     
-                <div class="row my-5">
+                <div class="row mt-50">
                     <div class="col-sm-12 col-md-4 col-lg-4 my-2 my-lg-0 px-0 px-lg-3">
                         <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="first_name">الاسم الأول</label> <br>
                         <input class="form-control" type="text" name="first_name" id="first_name" ngModel #first_name="ngModel" required placeholder="الاسم الأول">
@@ -37,7 +37,7 @@
                         <input class="form-control" type="text" name="mobile" id="mobile" ngModel #mobile="ngModel" required placeholder="رقم الجوال">
                     </div>
                 </div>
-                <div class="row my-5">
+                <div class="row mt-50">
                     <div class="col-sm-12 col-md-4 col-lg-2 my-2 my-lg-0 px-0 px-lg-3">
                         <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="city">المدينة</label> <br>
                         <input class="form-control" type="text" name="city" id="city" ngModel #city="ngModel" required placeholder="المدينة">
@@ -59,7 +59,7 @@
                         <input class="form-control" type="text" name="mailbox" id="mailbox" ngModel #mailbox="ngModel" required placeholder="صندوق البريد">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mt-5">
                     <div class="col-12">
                         <button class="addClient-btn mx-auto fs-30 Tajawal-Medium" [disabled]="form.invalid">إضافة</button>
                     </div>
