--- a/src/app/pages/client/components/view-personal-info/view-personal-info.component.html
+++ b/src/app/pages/client/components/view-personal-info/view-personal-info.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-50">
+<div class="row mt-50 mb-4">
     <div class="col-12">
         <a routerLink="/client" class="back-btn ms-4"><i class="pi pi-chevron-right text-white"></i></a>
     </div>
@@ -30,7 +30,7 @@
     </div>
 </div>
 
-<div class="row mt-50">
+<div class="row">
     <div class="col-12">
         <div [ngSwitch]="radioValue"> 
             <div *ngSwitchCase="'personal'">
@@ -52,7 +52,7 @@
                                 </div>
                             </div>
                 
-                            <div class="row my-5">
+                            <div class="row mt-50">
                                 <div class="col-sm-12 col-md-4 col-lg-4 my-2 my-lg-0 px-0 px-lg-3">
                                     <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="first_name">الاسم الأول</label> <br>
                                     <p class="fs-25 Tajawal-Bold">{{clientDetail?.first_name}}</p>
@@ -66,7 +66,7 @@
                                     <p class="fs-25 Tajawal-Bold">{{clientDetail?.mobile}}</p>
                                 </div>
                             </div>
-                            <div class="row my-5">
+                            <div class="row mt-50">
                                 <div class="col-sm-12 col-md-4 col-lg-2 my-2 my-lg-0 px-0 px-lg-3">
                                     <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="city">المدينة</label> <br>
                                     <p class="fs-25 Tajawal-Bold">{{clientDetail?.city}}</p>
@@ -105,7 +105,7 @@
                                 </div>
                             </div>
                 
-                            <div class="row my-5">
+                            <div class="row mt-50">
                                 <div class="col-sm-12 col-md-4 col-lg-4 my-2 my-lg-0 px-0 px-lg-3">
                                     <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="first_name">الاسم الأول</label> <br>
                                     <input class="form-control" type="text" name="first_name" id="first_name" [(ngModel)]="clientDetail.first_name" required placeholder="الاسم الأول">
@@ -119,7 +119,7 @@
                                     <input class="form-control" style="background-color: rgb(190, 190, 190)  !important; opacity: 0.6;" disabled readonly type="text" name="mobile" id="mobile" [(ngModel)]="clientDetail.mobile" required placeholder="رقم الجوال">
                                 </div>
                             </div>
-                            <div class="row my-5">
+                            <div class="row mt-50">
                                 <div class="col-sm-12 col-md-4 col-lg-2 my-2 my-lg-0 px-0 px-lg-3">
                                     <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="city">المدينة</label> <br>
                                     <input class="form-control" type="text" name="city" id="city" [(ngModel)]="clientDetail.city" required placeholder="المدينة">
@@ -141,7 +141,7 @@
                                     <input class="form-control" type="text" name="mailbox" id="mailbox" [(ngModel)]="clientDetail.mailbox" required placeholder="صندوق البريد">
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row mt-5">
                                 <div class="col-12">
                                     <button class="addClient-btn mx-auto fs-30 Tajawal-Medium" [disabled]="form.invalid">حفظ</button>
                                 </div>
@@ -149,6 +149,7 @@
                     </div>
                 </div>
             </div> 
+            <div *ngSwitchCase="'location'"><app-locations [id]="id"></app-locations></div>
         </div>
     </div>
 </div>
