--- a/src/app/pages/locations/components/add-location/add-location.component.css
+++ b/src/app/pages/locations/components/add-location/add-location.component.css
@@ -56,3 +56,20 @@
     justify-content: center;
     align-items: center;
 }
+
+::ng-deep .p-autocomplete-input,
+::ng-deep .p-autocomplete{
+    width: 100% !important;
+}
+
+
+::ng-deep .p-autocomplete-panel{
+    background: #F7F7F7 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #272D3B33;
+    padding: 10px;
+}
+
+::ng-deep .p-autocomplete-panel .p-autocomplete-items .p-autocomplete-item:hover{
+    background: #E0E0E0 0% 0% no-repeat padding-box;
+    border-radius: 8px;
+}
