--- a/src/styles.css
+++ b/src/styles.css
@@ -104,7 +104,7 @@ End Fonts
 Margins
 ************************************************/
 .mt-50 {
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 /************************************************
@@ -126,6 +126,10 @@ Colors
 
 .red-color {
     color: #B71212 !important;
+}
+
+.greytxt-color {
+    color: #626262 !important;
 }
 
 /************************************************
