--- a/src/app/pages/client/components/add-client/add-client.component.css
+++ b/src/app/pages/client/components/add-client/add-client.component.css
@@ -21,6 +21,7 @@
     width: 150px;
     height: 150px;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .image-container .for_ovelay{
@@ -34,13 +35,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    display: none;
+    /* display: none; */
     cursor: pointer;
 }
 
-.image-container label:hover .for_ovelay{
+/* .image-container label:hover .for_ovelay{
     display: flex;
-}
+} */
 
 .image-container .for_ovelay img{
     width: 30px;
@@ -55,6 +56,7 @@ input{
     background-color: transparent !important;
     border: 1px solid #707070 !important;
     border-radius: 10px;
+    height: 52px;
 }
 
 .addClient-btn{
@@ -66,4 +68,24 @@ input{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.p-inputgroup{
+    width: 100%;
+    background-color: transparent !important;
+    border: 1px solid #707070 !important;
+    border-radius: 10px;
+    height: 52px;
+}
+
+.p-inputgroup input{
+    border: 0 !important;
+}
+
+.p-inputgroup-addon{
+    background-color: transparent !important;
+    border: 0 !important;
+    outline: 0 !important;
+    margin: 0 0 0 10px ;
+    /* border-left: 1px solid #F7F7F7 ; */
 }
