--- a/src/app/pages/client/components/add-client/add-client.component.html
+++ b/src/app/pages/client/components/add-client/add-client.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-50">
+<div class="row mt-50 mb-4">
     <div class="col-12">
         <a routerLink="/client" class="back-btn ms-4"><i class="pi pi-chevron-right text-white"></i></a>
     </div>
@@ -7,7 +7,7 @@
     </div>
 </div>
 
-<div class="row mt-50">
+<div class="row">
     <div class="col-12">
         <div class="addClient-container h-100">
             <form #form="ngForm" (ngSubmit)="submit(form)">
@@ -15,11 +15,11 @@
                     <div class="col-12 image-container">
                         <label class="position-relative" for="uploadImage">
                             <img [src]="productImage" alt="profile">
-                            <div class="for_ovelay">
+                            <div *ngIf="!imageFile" class="for_ovelay">
                                 <img src="assets/Camera.png" alt="camera">
                             </div>
                         </label>
-                        <input type="file" name="avatar" id="uploadImage" required (change)="changeImage($event)" style="width:100%;" class="form-control"   accept="image/*">
+                        <input type="file" name="avatar" id="uploadImage" ngModel #avatar="ngModel" required (change)="changeImage($event)" style="width:100%;" class="form-control"   accept="image/*">
                     </div>
                 </div>
     
@@ -34,7 +34,10 @@
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-4 my-2 my-lg-0 px-0 px-lg-3">
                         <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="mobile">رقم الجوال</label> <br>
-                        <input class="form-control" type="text" name="mobile" id="mobile" ngModel #mobile="ngModel" required placeholder="رقم الجوال">
+                        <div class="p-inputgroup">
+                            <input class="form-control" type="text" minlength="9" maxlength="9" name="mobile" id="mobile" ngModel #mobile="ngModel" required placeholder="رقم الجوال">
+                            <span class="p-inputgroup-addon fs-22 Tajawal-Medium">966+</span>
+                        </div>
                     </div>
                 </div>
                 <div class="row mt-50">
