--- a/src/app/pages/client/components/view-personal-info/view-personal-info.component.css
+++ b/src/app/pages/client/components/view-personal-info/view-personal-info.component.css
@@ -92,6 +92,7 @@ input{
     background-color: transparent !important;
     border: 1px solid #707070 !important;
     border-radius: 10px;
+    height: 52px;
 }
 
 .addClient-btn{
@@ -118,4 +119,25 @@ input{
     position: absolute;
     top: 20px;
     left: 20px;
+}
+
+.p-inputgroup{
+    width: 100%;
+    background-color: rgb(190, 190, 190)  !important; 
+    opacity: 0.6;
+    border: 1px solid #707070 !important;
+    border-radius: 10px;
+    height: 52px;
+}
+
+.p-inputgroup input{
+    border: 0 !important;
+}
+
+.p-inputgroup-addon{
+    background-color: transparent !important;
+    border: 0 !important;
+    outline: 0 !important;
+    margin: 0 0 0 10px ;
+    /* border-left: 1px solid #F7F7F7 ; */
 }
