--- a/src/app/pages/client/components/view-personal-info/view-personal-info.component.html
+++ b/src/app/pages/client/components/view-personal-info/view-personal-info.component.html
@@ -116,7 +116,10 @@
                                 </div>
                                 <div class="col-sm-12 col-md-4 col-lg-4 my-2 my-lg-0 px-0 px-lg-3">
                                     <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="mobile">رقم الجوال</label> <br>
-                                    <input class="form-control" style="background-color: rgb(190, 190, 190)  !important; opacity: 0.6;" disabled readonly type="text" name="mobile" id="mobile" [(ngModel)]="clientDetail.mobile" required placeholder="رقم الجوال">
+                                    <div class="p-inputgroup">
+                                         <input class="form-control" minlength="9" maxlength="9" readonly type="text" name="mobile" id="mobile" [(ngModel)]="clientDetail.mobile" required placeholder="رقم الجوال">
+                                        <span class="p-inputgroup-addon fs-22 Tajawal-Medium">966+</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row mt-50">
