--- a/src/app/pages/supplier/components/add-supplier/add-supplier.component.html
+++ b/src/app/pages/supplier/components/add-supplier/add-supplier.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-50">
+<div class="row mt-50 mb-4">
     <div class="col-12">
         <a routerLink="/supplier" class="back-btn ms-4"><i class="pi pi-chevron-right text-white"></i></a>
     </div>
@@ -7,7 +7,7 @@
     </div>
 </div>
 
-<div class="row mt-50">
+<div class="row">
     <div class="col-12">
         <div class="addsupplier-container h-100">
             <form #form="ngForm" (ngSubmit)="submit(form)">
@@ -15,11 +15,11 @@
                     <div class="col-sm-12 col-md-4 col-lg-2 my-2 my-lg-0 px-0 px-lg-3 image-container">
                         <label class="position-relative" for="uploadImage">
                             <img [src]="productImage" alt="profile">
-                            <div class="for_ovelay">
+                            <div *ngIf="!imageFile" class="for_ovelay">
                                 <img src="assets/Camera.png" alt="camera">
                             </div>
                         </label>
-                        <input type="file" name="avatar" id="uploadImage" required (change)="changeImage($event)" style="width:100%;" class="form-control"   accept="image/*">
+                        <input type="file" name="avatar" id="uploadImage" ngModel #avatar="ngModel" required (change)="changeImage($event)" style="width:100%;" class="form-control"   accept="image/*">
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-3 my-2 my-lg-0 px-0 px-lg-3">
                         <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="first_name">الاسم الأول</label> <br>
@@ -31,7 +31,10 @@
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-3 my-2 my-lg-0 px-0 px-lg-3">
                         <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="mobile">رقم الجوال</label> <br>
-                        <input class="form-control" type="text" name="mobile" id="mobile" ngModel #mobile="ngModel" required placeholder="رقم الجوال">
+                        <div class="p-inputgroup">
+                            <input class="form-control" type="text" minlength="9" maxlength="9" name="mobile" id="mobile" ngModel #mobile="ngModel" required placeholder="رقم الجوال">
+                            <span class="p-inputgroup-addon fs-22 Tajawal-Medium">966+</span>
+                        </div>
                     </div>
                 </div>
 
@@ -51,12 +54,12 @@
                 </div>
                 <div class="row mt-50">
                     <div class="col-sm-12 col-md-4 col-lg-4 my-2 my-lg-0 px-0 px-lg-3">
-                        <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="postal_code">رقم السجل التجاري</label> <br>
-                        <input class="form-control" type="text" name="postal_code" id="postal_code" ngModel #postal_code="ngModel" required placeholder="رقم السجل التجاري">
+                        <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="comm_reg_number">رقم السجل التجاري</label> <br>
+                        <input class="form-control" type="text" name="comm_reg_number" id="comm_reg_number" ngModel #comm_reg_number="ngModel" required placeholder="رقم السجل التجاري">
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-4 my-2 my-lg-0 px-0 px-lg-3">
-                        <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="mailbox">رقم ضريبة القيمة المضافة</label> <br>
-                        <input class="form-control" type="text" name="mailbox" id="mailbox" ngModel #mailbox="ngModel" required placeholder="رقم ضريبة القيمة المضافة">
+                        <label class="form-label fs-22 Tajawal-Medium blue-txt-color" for="vat_number">رقم ضريبة القيمة المضافة</label> <br>
+                        <input class="form-control" type="text" name="vat_number" id="vat_number" ngModel #vat_number="ngModel" required placeholder="رقم ضريبة القيمة المضافة">
                     </div>
                 </div>
                 <div class="row mt-5">
