--- a/src/app/pages/supplier/components/view-supplier-info/view-supplier-info.component.css
+++ b/src/app/pages/supplier/components/view-supplier-info/view-supplier-info.component.css
@@ -1,3 +1,40 @@
+.labl {
+    display : block;
+    width: max-content;
+}
+.labl > input{ /* HIDE RADIO */
+    display: none; /* Makes input not-clickable */
+}
+.labl > input + div.radio-container  p{ /* DIV STYLES */
+    cursor:pointer;
+    color: #ACACAC;
+}
+
+
+.labl > input:checked + div.radio-container { /* (RADIO CHECKED) DIV STYLES */
+    position: relative;
+    width: max-content;
+    height: 50px;
+    color: #2A2A2C;
+}
+
+.labl > input:checked + div.radio-container::after { /* (RADIO CHECKED) DIV STYLES */
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 70%;
+    height: 3px;
+    margin: 0 auto;
+    background-color: #2A2A2C;
+}
+
+.labl > input:checked + div.radio-container p{ 
+    color: #2A2A2C;
+}
+
+
 .back-btn{
     width: 44px;
     height: 44px;
@@ -21,7 +58,6 @@
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    cursor: pointer;
 }
 
 .image-container .for_ovelay{
@@ -35,13 +71,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* display: none; */
+    display: none;
     cursor: pointer;
 }
 
-/* .image-container label:hover .for_ovelay{
+.image-container label:hover .for_ovelay{
     display: flex;
-} */
+}
 
 .image-container .for_ovelay img{
     width: 30px;
@@ -70,9 +106,25 @@ input{
     align-items: center;
 }
 
+.editsupplier-btn{
+    width: 110px;
+    height: 50px;
+    background: #2A2A2C 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #272D3B33;
+    border-radius: 10px;
+    color: #F7F7F7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+
 .p-inputgroup{
     width: 100%;
-    background-color: transparent !important;
+    background-color: rgb(190, 190, 190)  !important; 
+    opacity: 0.6;
     border: 1px solid #707070 !important;
     border-radius: 10px;
     height: 52px;
