--- a/src/app/pages/client/components/view-personal-info/view-personal-info.component.css
+++ b/src/app/pages/client/components/view-personal-info/view-personal-info.component.css
@@ -139,5 +139,6 @@ input{
     border: 0 !important;
     outline: 0 !important;
     margin: 0 0 0 10px ;
+    color: #000000;
     /* border-left: 1px solid #F7F7F7 ; */
 }
