--- a/src/app/pages/client/components/locations/locations.component.css
+++ b/src/app/pages/client/components/locations/locations.component.css
@@ -87,6 +87,12 @@ tbody, tfoot, th, thead, tr {
     height: max-content;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 8px 20px #00000029;
+    border-radius: 22px !important;
+}
+
+::ng-deep .p-dialog .p-dialog-content:last-of-type {
+    border-bottom-right-radius: 22px;
+    border-bottom-left-radius: 22px;
 }
 
 ::ng-deep .p-dialog-header-icons{
