--- a/src/styles.css
+++ b/src/styles.css
@@ -106,6 +106,9 @@ Margins
 .mt-50 {
     margin-top: 50px;
 }
+.mt-30 {
+    margin-top: 30px;
+}
 
 /************************************************
 End Fonts
