--- a/src/app/pages/client/components/view-personal-info/view-personal-info.component.html
+++ b/src/app/pages/client/components/view-personal-info/view-personal-info.component.html
@@ -9,24 +9,24 @@
                 <p class="fs-25 Tajawal-Bold">البيانات الشخصية</p>
             </div>
         </label>
-        <label class="labl mx-4">
+        <!-- <label class="labl mx-4">
             <input type="radio" name="radioname" [(ngModel)]="radioValue" value="transaction" />
             <div class="radio-container">
                 <p class="fs-25 Tajawal-Bold">سجل العمليات</p>
             </div>
-        </label>
+        </label> -->
         <label class="labl mx-4">
             <input type="radio" name="radioname" [(ngModel)]="radioValue" value="location" />
             <div class="radio-container">
                 <p class="fs-25 Tajawal-Bold">المواقع</p>
             </div>
         </label>
-        <label class="labl mx-4">
+        <!-- <label class="labl mx-4">
             <input type="radio" name="radioname" [(ngModel)]="radioValue" value="supplier" />
             <div class="radio-container">
                 <p class="fs-25 Tajawal-Bold">الوكالات</p>
             </div>
-        </label>
+        </label> -->
     </div>
 </div>
 
