--- a/src/app/pages/client/client.component.html
+++ b/src/app/pages/client/client.component.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 
-<div class="row mt-30">
+<div *ngIf="AllclientsData?.length" class="row mt-30">
     <div class="col-12">
         <table class="table">
             <thead>
@@ -60,6 +60,15 @@
             </tbody>
           </table>
     </div>
+</div>
+
+<div *ngIf="!AllclientsData?.length" class="row mt-50">
+  <div class="col-12 text-center">
+      <div>
+          <i style="font-size: 100px; color: #E0E0E0;" class="pi pi-info-circle my-4"></i>
+      </div>
+      <p class="Tajawal-Bold fs-28 my-2">لا يوجد لديك عملاء حالياً</p>
+  </div>
 </div>
 
 <pagination-controls 
