--- a/src/app/pages/locations/components/add-location/add-location.component.css
+++ b/src/app/pages/locations/components/add-location/add-location.component.css
@@ -60,6 +60,7 @@
 ::ng-deep .p-autocomplete-input,
 ::ng-deep .p-autocomplete{
     width: 100% !important;
+    background: white !important;
 }
 
 
