--- a/src/app/pages/locations/components/edit-location/edit-location.component.css
+++ b/src/app/pages/locations/components/edit-location/edit-location.component.css
@@ -73,6 +73,7 @@
 ::ng-deep .p-autocomplete-input,
 ::ng-deep .p-autocomplete{
     width: 100% !important;
+    background: white !important;
 }
 
 
