--- a/src/app/pages/locations/locations.component.html
+++ b/src/app/pages/locations/locations.component.html
@@ -12,7 +12,7 @@
     </div>
 </div>
 
-<div class="row my-2">
+<div *ngIf="allLocation?.length" class="row my-2">
     <div class="col-sm-12 col-md-6 col-lg-3 px-3 my-2 h-100" *ngFor="let item of allLocation | paginate:{
         itemsPerPage : 8,
         currentPage : page,
@@ -51,6 +51,15 @@
    (pageChange)="page = $event">
     </pagination-controls>
 </div>
+
+<div *ngIf="!allLocation?.length" class="row mt-50">
+    <div class="col-12 text-center">
+        <div>
+            <i style="font-size: 100px; color: #E0E0E0;" class="pi pi-info-circle my-4"></i>
+        </div>
+        <p class="Tajawal-Bold fs-28 my-2">لا يوجد لديك مواقع حالياً</p>
+    </div>
+  </div>
 
 <ngx-spinner
   bdColor="rgba(51,51,51,0.8)"
