--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-12 d-flex align-items-center">
-        <label class="labl mx-2">
+        <!-- <label class="labl mx-2">
             <input type="radio" (change)="handleRadioValue()" name="radioname" [value]="1" [checked]="1 == 1" />
             <div class="radio-container">
                     <i class="pi pi-money-bill fs-4"></i>
@@ -16,8 +16,8 @@
                     <p class="number m-0 Tajawal-Medium fs-20 me-5">55</p>
                 </div>
             </div>
-        </label>
-        <label class="labl mx-4">
+        </label> -->
+        <!-- <label class="labl mx-4">
             <input type="radio" (change)="handleRadioValue()" name="radioname" [value]="1" />
             <div class="radio-container">
                     <i class="pi pi-user-plus fs-4"></i>
@@ -26,18 +26,18 @@
                     <p class="number m-0 Tajawal-Medium fs-20 me-5">55</p>
                 </div>
             </div>
-        </label>
+        </label> -->
         <label class="labl mx-4">
-            <input type="radio" (change)="handleRadioValue()" name="radioname" [value]="1" />
+            <input type="radio" [(ngModel)]="radioValue" name="radioname" value="location" [checked]="radioValue == 'location'" />
             <div class="radio-container">
                     <i class="pi pi-map-marker fs-4"></i>
                 <div class="d-flex justify-content-between align-items-center">
                     <p class="m-0 Tajawal-Medium fs-20">أضف موقع</p>
-                    <p class="number m-0 Tajawal-Medium fs-20 me-5">55</p>
+                    <p class="number m-0 Tajawal-Medium fs-20 me-5">{{allLocations?.length ? allLocations.length : 0}}</p>
                 </div>
             </div>
         </label>
-        <label class="labl mx-4">
+        <!-- <label class="labl mx-4">
             <input type="radio" (change)="handleRadioValue()" name="radioname" [value]="1" />
             <div class="radio-container">
                     <i class="pi pi-sitemap fs-4"></i>
@@ -46,6 +46,15 @@
                     <p class="number m-0 Tajawal-Medium fs-20 me-5">55</p>
                 </div>
             </div>
-        </label>
+        </label> -->
     </div>
 </div>
+
+<div [ngSwitch]="radioValue">
+    <div *ngSwitchCase="'location'">
+        <app-location-orders [allLocationOrders]="allLocations"></app-location-orders>
+    </div>
+</div>
+
+
+
