--- a/src/app/pages/supplier/components/view-supplier-info/view-supplier-info.component.html
+++ b/src/app/pages/supplier/components/view-supplier-info/view-supplier-info.component.html
@@ -168,7 +168,7 @@
                     </div>
                 </div>
             </div> 
-            <div *ngSwitchCase="'money'"><app-supplier-money-info></app-supplier-money-info></div>
+            <div *ngSwitchCase="'money'"><app-supplier-money-info [res]="supplierDetail"></app-supplier-money-info></div>
         </div>
     </div>
 </div>
