--- a/src/app/pages/supplier/components/supplier-money-info/supplier-money-info.component.css
+++ b/src/app/pages/supplier/components/supplier-money-info/supplier-money-info.component.css
@@ -36,17 +36,58 @@ input:focus{
 }
 
 .credit_card{
-    width: 496px;
+    width: 430px;
     height: 227px;
     padding: 25px;
     background: #2A2A2C 0% 0% no-repeat padding-box;
     border-radius: 26px;
 }
 
-::ng-deep .swiper {
-    width: 95%;
+
+.card_container{
+    width: 100%;
+    height: 300px !important;
+}
+.carousel{
+    width: max-content;
+    height: 100% !important;
+    margin: auto 7% auto auto;
 }
 
-::ng-deep .swiper-slide {
-    width: max-content !important;
+.credit_card:nth-child(n+4){
+    display: none;
 }
+
+.credit_card:nth-child(1){
+    position: relative;
+    z-index: 3;
+}
+
+.credit_card:nth-child(2){
+    position: absolute;
+    top: 30px;
+    right: 45px;
+    z-index: 2;
+}
+
+.credit_card:nth-child(3){
+    position: absolute;
+    top: 60px;
+    right: 80px;
+    z-index: 1;
+}
+
+.carousel-btn{
+    position: absolute;
+    bottom: -40px;
+}
+
+.next,.prev{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 0;
+    background: #2A2A2C;
+    color: white;
+}
+
